# mcp-trove

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  spec.md
src/mcp_trove/: __init__.py  cli.py  config.py  crypto.py  i18n.py  index.py  server.py  vault.py
src/mcp_trove/tools/: __init__.py  add_secret.py  add_snippet.py  doctor.py  get_secret.py  init_vault.py  listing.py  remove.py  search.py  update_secret.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_tools.py  test_vault.py
