[project]
name = "mcp-trove"
version = "0.2.0"
description = "MCP server for a git-backed vault of plaintext snippets and encrypted secrets, with i18n support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Maurizio Mocci", email = "mauriziomocci@gmail.com"}
]
keywords = ["mcp", "trove", "snippets", "secrets", "vault", "markdown", "age", "encryption"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Natural Language :: Italian",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp>=1.0.0",
    "pyrage>=1.1.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/mauriziomocci/mcp-trove"
Repository = "https://github.com/mauriziomocci/mcp-trove"
Issues = "https://github.com/mauriziomocci/mcp-trove/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_trove"]

[project.scripts]
mcp-trove = "mcp_trove.server:run"
trove = "mcp_trove.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
